--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,19 +6,27 @@
 
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
+    <string name="personal_header">Personalização</string>
+    <string name="accessibility_header">Acessibilidade</string>
 
     <!-- Messages Preferences -->
     <string name="signature_title">Your signature</string>
     <string name="reply_title">Default reply action</string>
 
     <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="sync_title">Notificações</string>
+    <string name="attachment_title">Medalhas</string>
+<!--    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>-->
+
     <string name="title_activity_take_picture">TakePictureActivity</string>
+
+    <!-- Accessibility Preferences -->
+    <string name="colorblind_title">Modo daltónico</string>
+    <string name="colorblind_summary_on">Adapta as cores da aplicação de forma a ajustar-se a pessoas com daltonismo
+    </string>
+    <string name="colorblind_summary_off">Adapta as cores da aplicação de forma a ajustar-se a pessoas com daltonismo</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
